made a start with logic to overwrite better values in the next iteration